# QtChatClient

./: CMakeLists.txt  ChatRequest.cpp  ChatRequest.h  Client_en_US.ts  DependingWidthWidget.cpp  DependingWidthWidget.h  GetChatHistoryRequest.cpp  GetChatHistoryRequest.h  MainWidget.cpp  MainWidget.h  MessageDataRole.h  MessageItemDelegate.cpp  MessageItemDelegate.h  MessageLabel.cpp  MessageLabel.h  MessageModel.cpp  MessageModel.h  MessagesViewer.cpp  MessagesViewer.h  README.md  SendChatMessage.cpp  SendChatMessage.h  Settings.h  SettingsWidget.cpp  SettingsWidget.h  TcpClient.cpp  TcpClient.h  TcpClientWorker.cpp  TcpClientWorker.h  main.cpp  resources.qrc
